--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-tooltip": "^4.2.14",
     "reactjs-popup": "^2.0.4",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.1.0",
     "universal-cookie": "^4.0.4"
   },
